--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,6 @@ jobs:
       env:
         OVH_HOSTING_USER: ${{ secrets.OVH_HOSTING_USER }}
         OVH_HOSTING_PASSWORD: ${{ secrets.OVH_HOSTING_PASSWORD }}
-        OVH_HOSTING_DOMAIN: ssh://khordevowh@ssh.cluster020.hosting.ovh.net:22/
+        OVH_HOSTING_DOMAIN: ssh.cluster020.hosting.ovh.net
         REPOSITORY_NAME: website-khor
         REPOSITORY_URL: https://github.com/MoltenKhor/website-khor.git
