--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,15 @@
-- name: Deploy to OVH hosting
-  uses: pitscher/ovh-deploy-hosting-action@v1
+on: [push]
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    name: Deploy my nice code
+    steps:
+    - name: Deploy to OVH hosting
+      uses: pitscher/ovh-deploy-hosting-action@v1
+      env:
+        OVH_HOSTING_USER: ${{ secrets.OVH_HOSTING_USER }}
+        OVH_HOSTING_PASSWORD: ${{ secrets.OVH_HOSTING_PASSWORD }}
+        OVH_HOSTING_DOMAIN: ssh.cluster020.hosting.ovh.net
+        REPOSITORY_NAME: website-khor
+        REPOSITORY_URL: https://github.com/moltenkhor/website-khor.git
