--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
         OVH_HOSTING_PASSWORD: ${{ secrets.OVH_HOSTING_PASSWORD }}
         OVH_HOSTING_DOMAIN: ssh.cluster020.hosting.ovh.net
         REPOSITORY_NAME: website-khor
-        REPOSITORY_URL: https://github.com/moltenkhor/website-khor.git
+        REPOSITORY_URL: https://github.com/MoltenKhor/website-khor
