--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,5 @@ jobs:
         OVH_HOSTING_USER: ${{ secrets.OVH_HOSTING_USER }}
         OVH_HOSTING_PASSWORD: ${{ secrets.OVH_HOSTING_PASSWORD }}
         OVH_HOSTING_DOMAIN: ssh.cluster020.hosting.ovh.net
-        REPOSITORY_NAME: Algoritmica
-        REPOSITORY_URL: https://github.com/MoltenKhor/Algoritmica
+        REPOSITORY_NAME: website-khor
+        REPOSITORY_URL: https://github.com/MoltenKhor/website-khor
